# Advance-Data-Structures-in-C

./: .gitignore  CMakeLists.txt  README.md  main.c
Arrays/: arrays.c  arrays.h
Binary Search/: Binary_Search.c  Binary_Search.h
Binary Tree/: BinaryTree.c  BinaryTree.h
Generic LinkList Queue/: Queue.c
Generic Queue/: Queue.c  Queue.h
Queue/: Queue.c  Queue.h
Sequential Search/: Sequential_Search.c  Sequential_Search.h
Simple Queue/: SimpleQueue.c  SimpleQueue.h
Simple Stack/: SimpleStack.c  SimpleStack.h
Vector/: Vector.c  Vector.h
